# squad-content-pipeline

./: .gitignore  MANIFEST.in  README.md  SELF_SCHEDULER.md  daily_runner.py  deploy-to-github.sh  deploy.sh  install-from-source.sh  install_on_remote.sh  main.py  main.py.bak  main.py.bak2  main.py.telegram-backup  publish-to-pypi.sh  pyproject.toml  self_scheduler.sh  setup-pypi-token.sh  setup.py  start_daily_runner.sh  stop_daily_runner.sh  test_content_pipeline.py
content_pipeline/: __init__.py  main.py
tests/: test_content_pipeline.py
